fix flex wrap for safari

--- a/styles/ProjectCard.module.css
+++ b/styles/ProjectCard.module.css
@@ -3,8 +3,7 @@
 
 .projectCard {
     cursor: pointer;
-    width: fill;
-    height: fill;
+    overflow: hidden;
     margin: 1.8vw;
     transition: 0.35s ease-out;
     -webkit-transition: 0.35s ease;
