--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -5,7 +5,6 @@
     position: relative;
     width: 100vw;
     min-height: 100vh;
-    max-height: fit-content;
     height: fit-content;
 }
 
@@ -46,6 +45,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    gap: 2vw;
     margin: 0;
     padding: 0;
 }
